[gd_scene load_steps=3 format=3 uid="uid://b8lormv86bklw"]

[ext_resource type="PackedScene" uid="uid://bjxxbc7q2u1o8" path="res://ropes/rope.tscn" id="1_urdm8"]
[ext_resource type="Script" path="res://ropes/area_rope.gd" id="2_3lw33"]

[node name="AreaRope" instance=ExtResource("1_urdm8")]
script = ExtResource("2_3lw33")
mask = 1

[node name="RopeLine2D" parent="." index="0"]
points = PackedVector2Array(0, 0, 0, 20.0036, 0, 40.0071, 0, 60.0102, 0, 80.0129, 0, 100.015, 0, 120.017, 0, 140.018, 0, 160.019, 0, 180.019)

[node name="Area2dSegments" type="Area2D" parent="." index="1"]
unique_name_in_owner = true
collision_layer = 0

[connection signal="body_entered" from="Area2dSegments" to="." method="_on_body_entered"]
